Fix styles of manage agents select in group for Dark mode

--- a/public/components/management/groups/multiple-agent-selector.less
+++ b/public/components/management/groups/multiple-agent-selector.less
@@ -54,6 +54,12 @@
     margin: 0 0 0 15px;
 }
 
+.wzMultipleSelectorSelect{
+    width: 100%;
+    background-color: #fbfcfd;
+    border: 1px solid #D3DAE6;
+}
+  
 .wzMultipleSelectorLeft{
     margin: 0 15px 0 0;
 }
