--- a/public/less/dark_theme/wz_theme_dark.css
+++ b/public/less/dark_theme/wz_theme_dark.css
@@ -314,7 +314,11 @@ md-divider.md-default-theme, md-divider {
 
 .wzMultipleSelectorRemoving{
   background-color: #990000!important;
+}
 
+.wzMultipleSelectorSelect{
+  background-color: #16171c;
+  border: 1px solid rgb(52, 55, 65);
 }
 
 .wz-button, .wz-button-groups, .refresh-agents-btn {
